<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/side_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/bloodGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorPrimary"
            android:text="@string/blood_required"/>

        <TextView
            android:id="@+id/contactNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/close"
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:background="@color/transparent"
        android:padding="@dimen/side_padding"
        android:contentDescription="@string/todo"/>

</LinearLayout>