<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/side_padding">

    <TextView
        android:id="@+id/bloodGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/blood_required"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/call"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:src="@drawable/call"
            android:background="@color/transparent"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/side_padding"
            android:contentDescription="@string/todo"/>

    </LinearLayout>

</LinearLayout>