<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMemberActivity"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:id="@+id/addMemberLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_padding">

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/large_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_top">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextLabel">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/donorRegistrationNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_background"
                        android:hint="@string/roll_number"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textAllCaps="true"/>
                </android.support.design.widget.TextInputLayout>
                <ImageButton
                    android:id="@+id/searchUser"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search"
                    tools:ignore="ContentDescription"
                    android:background="@color/transparent"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_marginTop="@dimen/margin_top">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/donorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:padding="8dp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_marginTop="@dimen/margin_top">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/donorEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_marginTop="@dimen/margin_top">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/donorContactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/contact_number"
                    android:inputType="numberSigned"
                    android:padding="8dp"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_group"
                android:layout_marginTop="@dimen/margin_top"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/donorBloodGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:entries="@array/blood_group"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginTop="@dimen/margin_top"
                android:textColor="@color/colorPrimary"/>
            <RadioGroup
                android:id="@+id/donorGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginTop="@dimen/margin_top"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/donorAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:entries="@array/city_names"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/college_name"
                android:layout_marginTop="@dimen/margin_top"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/donorCollege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:entries="@array/college_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:layout_marginTop="@dimen/margin_top"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/donorDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:entries="@array/department"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section"
                android:layout_marginTop="@dimen/margin_top"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/donorSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:entries="@array/section"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:layout_marginTop="@dimen/margin_top"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/donorYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:entries="@array/year"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venue"
                android:layout_marginTop="@dimen/margin_top"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:entries="@array/venue"/>


        </LinearLayout>

        <Button
            android:id="@+id/addMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="@string/add_member"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_below="@id/linearLayout"/>

    </RelativeLayout>

</ScrollView>