<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:id="@+id/loginLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/userReg"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:src="@drawable/adityalogo"
            android:contentDescription="TODO" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_above="@id/passwordLayout"
            android:layout_marginLeft="@dimen/side_padding"
            android:layout_marginRight="@dimen/side_padding"
            android:layout_marginBottom="30dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/roll_number"
                android:inputType="text"
                android:textAllCaps="true"
                android:padding="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/side_padding"
            android:layout_marginRight="@dimen/side_padding"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_padding"
            android:layout_marginRight="@dimen/side_padding"
            android:text="@string/forgot_password"
            android:textSize="@dimen/normal_text"
            android:layout_below="@id/passwordLayout"
            android:layout_marginTop="@dimen/margin_top"
            android:textColor="@color/colorPrimary"
            android:onClick="ResetPassword"
            android:paddingTop="@dimen/side_padding"
            android:paddingBottom="@dimen/side_padding"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text"/>

    </RelativeLayout>

</ScrollView>